# tessera

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.cargo/: config.toml
.github/workflows/: audit-on-push.yml  audit.yml  general.yml  scheduled-audit.yml
configuration/: base.yaml
migrations/: 20220724050203_create_tickets_table.sql  20220726081750_create_users_table.sql  20220726081755_create_admin_user.sql  20230320125631_create_tickets_table.sql  20230323140046_create_users_table.sql  20230323140053_create_admin_user.sql  20230411151030_update_tickets_table_to_add_created_at_column.sql  20230411151111_update_tickets_to_backfill_created_at_column.sql  20230411151210_update_tickets_to_make_mandatory_created_at_column.sql  20230417135435_update_tickets_table_to_add_created_by_column.sql  20230417135446_update_tickets_to_backfill_created_by_column.sql  20230417135455_update_tickets_to_make_mandatory_created_by_column.sql  20230418140715_update_tickets_table_to_add_is_open_column.sql  20230418140730_update_tickets_to_backfill_is_open_column.sql  20230418140740_update_tickets_to_make_mandatory_is_open_column.sql  20230504142416_update_tickets_table_to_add_priority_column.sql  20230504142421_update_tickets_to_backfill_priority_column.sql  20230504142431_update_tickets_to_make_mandatory_priority_column.sql
scripts/: init_postgres.sh  init_redis.sh
src/: authentication.rs  configuration.rs  error.rs  helpers.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/domain/: mod.rs  new_ticket.rs  ticket_description.rs  ticket_title.rs
src/domain/ticket/: mod.rs  new_ticket.rs  ticket_description.rs  ticket_title.rs  valid_ticket.rs
src/domain/user/: mod.rs  new_user.rs  user_password.rs  user_username.rs
src/routes/: dashboard.rs  health_check.rs  home.rs  login.rs  logout.rs  mod.rs  password.rs  register.rs  tickets.rs
static/css/: styles.css
static/js/: main.js
templates/: aside.html  base.html  create_ticket.html  dashboard.html  home.html  login.html  password.html  register.html  see_ticket.html  see_tickets.html
tests/api/: dashboard.rs  health_check.rs  helpers.rs  login.rs  logout.rs  main.rs  password.rs  register.rs  tickets.rs
