[package]
name = "tessera"
version = "0.1.0"
authors = ["Clément VISTE <clementviste36@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tessera"

[dependencies]
# Asynchronous runtime.
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
# Web framework.
actix-web = { version = "4", default-features = false }
actix-web-lab = { version = "0.19", default-features = false, features = [
    "actix-web-lab-derive",
] }
actix-web-flash-messages = { version = "0.4", default-features = false, features = [
    "cookies",
] }
actix-files = { version = "0.6", default-features = false }
# Session management.
actix-session = { version = "0.7", default-features = false, features = [
    "redis-rs-tls-session",
] }
# SQL toolkit.
sqlx = { version = "0.6", default-features = false, features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "migrate",
    "uuid",
    "offline",
] }
# Templating engine.
askama = { version = "0.12", default-features = false }
# Configuration management.
config = { version = "0.13", default-features = false, features = ["yaml"] }
# Serialization and deserialization framework.
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
serde-aux = { version = "4", default-features = false }
# Telemetry.
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
] }
tracing-bunyan-formatter = { version = "0.3", default-features = false }
tracing-log = { version = "0.1", default-features = false }
tracing-actix-web = { version = "0.7", default-features = false }
# Error handling.
thiserror = { version = "1", default-features = false }
anyhow = { version = "1", default-features = false, features = ["std"] }
# Handle secret values.
secrecy = { version = "0.8", default-features = false, features = [
    "alloc",
    "serde",
] }
# Random number generator.
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
# Random UUID generator.
uuid = { version = "1", default-features = false, features = ["v4", "serde"] }
# Base64 encoder/decoder.
base64 = { version = "0.21", default-features = false }
# Password hasher.
argon2 = { version = "0.5", default-features = false, features = ["std"] }
# Split strings.
unicode-segmentation = { version = "1", default-features = false }

[dev-dependencies]
# HTTP client.
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "cookies",
] }
# Provide additional assert macros.
claims = { version = "0.7", default-features = false }
